# assingment-

./: .gitignore  ARCHITECTURE.md  README.md  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  pyproject.toml
backend/app/: main.py  seed.py
backend/app/core/: config.py  database.py
backend/app/models/: models.py
backend/app/routes/: routes.py
backend/app/schemas/: schemas.py
backend/app/services/: adaptive_engine.py  llm_service.py
frontend/: app.js  index.html  styles.css
